Rozsekano do souboru dle zadani

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!doctype html>
-<html lang="en">
+<html lang="cs">
 <head>
 	<meta charset="UTF-8">
-	<title>VYT</title>
-	<!-- Javascript -->
-	<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
-	<script type="text/javascript" src="menu.js"></script>
+	<title>METALLICA</title>
 
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="css/style.php?file=reset.css">
 	<link rel="stylesheet" href="css/style.php?file=style.scss">
+
+	<!-- meta tags -->
+	<meta name="description" content="Web o trash-metalové legendě Metallice.">
+	<meta name="keywords" content="Metallica,metal,trash">
+	<meta name="author" content="Josef Kolář, thejoeejoee@gmail.com">
+
 </head>
 <body>
 	<div id="container">
@@ -17,42 +20,38 @@
 		<img src="css/Metallica_wordmark.svg" alt="Metallica">
 		<nav>
 			<ul>
-				<li><a href="">členové</a></li>
-				<li><a href="">turné</a></li>
-				<li><a href="">diskografie</a></li>
-				<li><a href="">historie</a></li>
-				<li><a href="">média</a></li>
+				<li><a href="index.html">úvod</a></li>
+				<li><a href="clenove.html">členové</a></li>
+				<li><a href="diskografie.html">diskografie</a></li>
+				<li><a href="historie.html">historie</a></li>
+				<li><a href="ostatni.html">ostatní</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<article>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!</p>
+		<p><b>Metallica</b> je americká thrash-metalová skupina založená roku 1981 v Los Angeles. Pro první alba Metallicy jsou
+		typická rychlejší tempa skladeb, agresivní a ve svém stylu i hudebně náročnější kompozice. Tato skutečnost je
+		zařadila společně se skupinami Megadeth, Slayer a Anthrax do „Velké čtyřky“ thrash metalu. Skupina se dala
+		dohromady na základě inzerátu v losangeleských novinách, který podal bubeník Lars Ulrich.</p>
+		<p>Ve skupině hraje sólový kytarista <b><a href="clenove.html#kirk">Kirk Hammett</a></b> (který se přidal ke skupině v roce 1983), basový kytarista <b><a href="clenove.html#rob">Robert Trujillo</a></b> (členem od roku 2003) spolu se zakládajícím bubeníkem <b><a href="clenove.html#lars">Larsem Ulrichem</a></b> a pak zpěvákem a doprovodným kytaristou
+		<b><a href="clenove.html#james">Jamesem Hetfieldem</a></b>. Předchozí členové skupiny byli sólový kytarista Dave Mustaine (který odešel a založil
+		skupinu Megadeth) a basisté Ron McGovney, Cliff Burton a Jason Newsted. Skupina také dlouho spolupracovala s
+		producentem Bobem Rockem, který produkoval všechna alba od roku 1990 do roku 2003 a pomáhal také jako
+		dočasný baskytarista po odchodu Jasona Newsteda do příchodu Trujilla.</p>
 		<img src="http://www.mkzjes.cz/program/images/mettallaacia.jpg" alt="Trulijo">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!</p>
-		<img src="http://www.fresnobee.com/static/2008/wallpaper/metallica/met_trujillo_1024.jpg" alt="Trulijo">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!</p>
-		<img src="http://overkill.pl/includes/img_news/8514ed32968ac78a4fef.jpg" alt="Hetfield" class="half">
-		<img src="http://multimedia.pol.dk/archive/00619/Metallica_619009a.jpg" alt="Hetfield" class="half">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, nisi ab dolorem iste. Iste, maxime ab corporis incidunt inventore explicabo qui velit ipsa sapiente unde numquam accusamus earum commodi voluptatibus!</p>
+		<p>Kapela si dokázala postupně získávat stále větší a větší množství fanoušků v undergroundu, a také přízeň kritiky.
+		Někteří kritici považují album <b>Master of Puppets</b> z roku 1986 za jedno z nejvýznamnějších metalových alb.
+		Skupina dosáhla výrazný komerční úspěch s pátým albem Metallica (známým také jako <b>Black Album</b>), vydaném
+		roku 1991, které debutovalo na 1. místě žebříčku Billboard 200. Tímto albem se kapela počala ubírat směrem ke
+		střednímu proudu. Celosvětového ohlasu dosáhly singly <b>„Fade to Black“, „<b>Master of Puppets</b>“, „Welcome Home
+		(Sanitarium)“, „One“, „Enter Sandman“, „The Unforgiven“, „Nothing Else Matters“, „Fuel“ a „Whiskey in the
+		Jar“</b>.</p>
 	</article>
-
+		
 	<footer>
 		<img src="css/logo_svetly.png" alt="Logo" height="50">
+		<p>Tyto stránky byly vytvořeny studentem Josefem Kolářem jako závěrečný projekt do hodin výuky výpočetní techniky. ©JoeE 2014</p>
 	</footer>
 	</div>
 </body>
